--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
 Привет, я Алена
+<br>
 <a href='https://www.google.com'>Это ссылка на ГУГЛ</a>
-
+<br>
+<a href='https://www.vk.com'>Это ссылка на КОНТАКТ</a>
 </body>
