--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
 <a href='https://www.google.com'>Это ссылка на ГУГЛ</a>
 <br>
 <a href='https://www.vk.com'>Это ссылка на КОНТАКТ</a>
+<br>
+<a href='page2.html'>Это ссылка на ВТОРУЮ СТРАНИЦУ</a>
 </body>
