--- a/newpage.html
+++ b/newpage.html
@@ -1,5 +1,4 @@
-<body>
-Я люблю Ромочку
-<br>
+<body><h1>Я люблю Ромочку</h1><br>Ты солнышко
+<br><br><br>
 <img src='сердечко.jpg'>
-  </body>
+</body>
