--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
 <a href='https://www.vk.com'>Это ссылка на КОНТАКТ</a>
 <br>
 <a href='page2.html'>Это ссылка на ВТОРУЮ СТРАНИЦУ</a>
+<a href='lesson2.html'>Это ссылка на третью СТРАНИЦУ урок 2</a>
+  
+  
 </body>
